--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@mui/system": "^5.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-query": "^3.34.4",
     "react-router-dom": "^6.0.2",
     "react-window": "^1.8.6",
     "styled-components": "^5.3.3",
