--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@material-ui/lab": "^4.0.0-alpha.60",
     "@mui/system": "^5.2.3",
     "@reduxjs/toolkit": "^1.7.1",
+    "notistack": "^1.0.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.22.2",
