--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@mui/system": "^5.2.3",
     "@reduxjs/toolkit": "^1.7.1",
     "notistack": "^1.0.10",
+    "prop-types": "^15.8.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.22.2",
