package json update homepage

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "buydirect_ecommerce_application",
+  "homepage": "https://anastasiiadali.github.io/buydirect_ecommerce_application/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -44,6 +45,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint .",
