--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "buydirect_ecommerce_application",
-  "homepage": "https://anastasiiadali.github.io/buydirect_ecommerce_application",
+  "homepage": "https://buydirect.github.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -46,7 +46,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "predeploy": "yarn run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -b master -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint .",
